# flipperplanning3DTerrain

./: LICENSE  README.md
25dflipper/: CMakeLists.txt  README.md  package.xml  setup.py
25dflipper/flipper25d/: README.md  config.py  expand.py  following.py  get_data.sh  optTrackFollowing.py  path_search.py  util.py
25dflipper/flipper25d/cspace/: cspace.py
25dflipper/flipper25d/exp/0726_bag/: comment.md  iramp_0.bag  iramp_10.bag  iramp_30.bag  iramp_35.bag  iramp_5.bag  ramp_0.bag  ramp_15.bag  ramp_20.bag  ramp_25.bag  step_0.bag  step_25.bag  step_30.bag
25dflipper/flipper25d/exp/bag/: 2019-07-26-15-31-49.bag  2019-07-26-15-38-01.bag  2019-07-26-15-41-16.bag  2019-07-26-15-42-50.bag  2019-07-26-15-42-58.bag  2019-07-26-15-55-11.bag  2019-07-26-15-58-03.bag  2019-07-26-16-06-29.bag  2019-07-26-16-13-33.bag  2019-07-26-16-15-34.bag  2019-07-26-16-22-22.bag  2019-07-26-16-27-58.bag  2019-07-26-16-38-38.bag  2019-07-26-16-39-58.bag  2019-07-26-16-42-23.bag  2019-07-26-16-44-34.bag  2019-07-26-16-46-19.bag
25dflipper/flipper25d/exp/conf_path/: con_rampconfig_path.mat  con_rampexpanded_config_path.mat  iramp_0config_path.mat  iramp_0expanded_config_path.mat  iramp_10config_path.mat  iramp_10expanded_config_path.mat  iramp_15config_path.mat  iramp_15expanded_config_path.mat  iramp_20config_path.mat  iramp_20expanded_config_path.mat  iramp_25config_path.mat  iramp_25expanded_config_path.mat  iramp_30config_path.mat  iramp_30expanded_config_path.mat  iramp_35config_path.mat  (+47 more)
25dflipper/flipper25d/vis/: global.py  local.py  vis.py
25dflipper/map/: comment.md
(+27 files in other folders)
